# opla

./: .gitattributes  .gitignore  LICENSE  README.md  benchmark.py  convert_digrec.py  convert_gorman.py  export_conllu.py  export_onnx.py  fix_heads.py  fix_heads_deep.py  merge_enjambed.py  pyproject.toml  train.py  upload_weights.py  verify_onnx.py
.github/workflows/: test.yml
data/: polylas_gold.conllu  polylas_gold_deep.conllu  polylas_gold_fixed.conllu  polylas_gold_merged.conllu
opla/: __init__.py  decode.py  labels.py  model.py  onnx_model.py  segment.py  tokenize.py  weights.py
tests/: conftest.py  test_opla.py
