[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opla"
version = "0.1.0"
description = "GPU-optimized Greek POS tagger + dependency parser"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "huggingface-hub",
]

[project.optional-dependencies]
lemma = ["dilemma"]

[tool.pytest.ini_options]
markers = [
    "slow: tests requiring model weights (skip by default, run with --run-slow)",
]
